layout_tests_rerun.log
===========================================
  UI Layout Tests: 5x Iteration Run
  Testing ALL screens for layout issues
===========================================

Source: /Volumes/X10 Pro/CLIP
Output: /Volumes/X10 Pro/testoutput


==========================================
 Test Iteration 1/5
==========================================
[1;34mSetting up test data for run 1...[0m
✓ Test data ready (6 files via symlinks)
[1;33m[Layout Tests - Run 1/5][0m
[0;31m✗ Run 1 FAILED[0m
Log: LayoutTestResults/layout_test_run_1_20251117_141605.log
/Users/romanwilson/projects/videocull/VideoCullingApp/Views/WelcomeView.swift:78:66: error: value of optional type 'URL?' must be unwrapped to a value of type 'URL'
                        if viewModel.isOnExternalMedia(viewModel.inputFolderURL) {
                                                                 ^
[1;34mCleaning up test data...[0m
✓ Cleanup complete

[0;31mStopping due to test failure[0m

Review the log file for details:
LayoutTestResults/layout_test_run_1_20251117_141605.log
